--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,36 @@
+2005-01-02  Jost Boekemeier  <jostb@intern>
+
+	* README: Updated documentation from index.html
+	
+	* php_java.h: Use php_config.h.
+
+	* tests.m4/function_checks.m4: Removed checks already provided by
+	php/php_config.h
+	
+	* init_cfg.c.in, bind.c, client.c, java.c, java_bridge.c,
+	php_java.h: cfg is now a true global.
+	
+	* bind.c (java_start_server): Check server, start, wait.
+	(java_wait_server): New function
+	(java_test_server): New function
+	
+	* php_java.h (java_start_server, java_test_server): New functions.
+
+	* client.c (java_do_test_server, java_test_server): Removed.
+
+	* java.c (init_server): Removed.
+	(PHP_MINIT_FUNCTION): Call java_start_server instead of
+	init_server.
+
+	* init_cfg.c.in (init_socket): Generate a unique socketname in the
+	Linux abstract namespace.
+	
+	* server/configure.in: AC_CONFIG_AUX_DIR before AM_INIT_AUTOMAKE,
+	required by automake 1.8
+
+	* tests.m4/threads.m4, tests.m4/function_checks.m4: Avoid
+	"underquoted" warnings.
+	
 2004-12-19  Jost Boekemeier  <jostb@intern>
 
 	* client.c, bind.c, server/natcJavaBridge.c, server/JavaBridge.java, server/acinclude.m4, server/configure.in, config.m4, java.c: 
