--- a/INSTALL
+++ b/INSTALL
@@ -3,7 +3,7 @@ Installation from RPM
 
 NOTE: If you run a SELinux kernel, you must install the policy files
 before you can run the PHP/Java Bridge. The php-java-bridge RPM
-contains the policy files in the /usr/share/doc directory. I is
+contains the policy files in the /usr/share/doc directory. It is
 assumed that you know how to install them.
 
 * Install a J2RE, for example with the command:
@@ -40,7 +40,7 @@ Installation from source code
 
 NOTE: If you run a SELinux kernel, you must install the policy files
 before you can run the PHP/Java Bridge. The php-java-bridge source
-tarball contains the policy files in the root directory. I is assumed
+tarball contains the policy files in the root directory. It is assumed
 that you know how to install them.
 
 The following software components must be installed on your computer:
